--- a/Frontend/src/styles/Navbar.css
+++ b/Frontend/src/styles/Navbar.css
@@ -2,17 +2,17 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  background: #222;
+  background: #ffffff;
   padding: 0.75rem 2rem;
-  box-shadow: 0 2px 8px rgba(210, 196, 196, 0.07);
+  box-shadow: 0 4px 16px rgba(171, 152, 152, 0.35);
   border-radius: 24px;
-  height: 50px;
+  height: 45px;
   margin-top: 24px;
 }
 
 .navbar-logo {
   text-decoration: none;
-  color: #fff;
+  color: #000000;
   display: flex;
   align-items: center;
 }
@@ -30,7 +30,7 @@
 }
 
 .navbar-links a {
-  color: #fff;
+  color: #000000;
   text-decoration: none;
   font-size: 1.1rem;
   font-weight: 500;
@@ -40,7 +40,7 @@
 }
 
 .navbar-links a:hover {
-  background: #f2f2f2;
+  background: #c6c6c6;
   color: #222;
   transition: background 0.3s, color 0.2s;
 }
