--- a/Frontend/src/styles/Navbar.css
+++ b/Frontend/src/styles/Navbar.css
@@ -1,11 +1,13 @@
 .navbar {
+  margin-top: 30px;
   display: flex;
-  align-items: center; /* Vertically center all children */
+  align-items: center;
   justify-content: space-between;
   padding: 0 2rem;
-  height: 70px; /* Set a consistent height */
+  height: 70px;
   background: #fff;
-  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.04);
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+  border-radius: 30px;
 }
 
 .navbar-logo {
@@ -41,7 +43,7 @@
 }
 
 .navbar-links a:hover {
-  background: #c6c6c6;
+  background: #6ebae8;
   color: #222;
   transition: background 0.3s, color 0.2s;
 }
