--- a/Frontend/src/styles/Form.css
+++ b/Frontend/src/styles/Form.css
@@ -99,7 +99,9 @@
   font-size: 1.1rem;
   font-weight: 400;
   cursor: pointer;
-  transition: border 0.2s, box-shadow 0.2s;
+  transition:
+    border 0.2s,
+    box-shadow 0.2s;
   margin-top: 0.2rem;
   margin-bottom: 0.2rem;
   border: 1.5px solid #d1d5db;
